updating through github due to error in vscode

--- a/main/Video_playback/movies/avatar_the_way_of_water.html
+++ b/main/Video_playback/movies/avatar_the_way_of_water.html
@@ -89,36 +89,31 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Avatar: The Way of Water</h5>
                     </div>
 
                     <div class="video-container">
-                              <!-- <div class="video-episode-container">
-
-                              </div> -->
-
                               <video class="video-file" id="myVideo" controls>
-                                        <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
                                         <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Avatar2.jpeg" alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Avatar: The Way Of Water</h2>
+                                        <h5>2022 | Movie | 3h 12m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  Jake Sully lives with his newfound family formed on the extrasolar
+                                                  moon Pandora. Once a familiar threat returns to finish what was
+                                                  previously started, Jake must work with Neytiri and the army of the
+                                                  Na'vi race to protect their home.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Action | Adventure | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>7.5
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -131,9 +126,9 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                        <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                         <span>
-                                                  <h4>Jeff Chan</h4>
+                                                  <h4>James Cameron</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -145,46 +140,32 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
+                                                            <h4>James Cameron</h4>
                                                             <h2>Director | Writer | Producer</h2>
                                                   </span>
                                         </div>
 
+                                        
+                              </span>
+
+                              <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Rick Jaffa</h4>
+                                                            <h2>Writer | Producer | Actor</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-                              </span>
-
-                              <span>
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Amanda Silver</h4>
+                                                            <h2>Writer | Producer | Actress</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -198,18 +179,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Sam Worthington</h4>
+                                                            <h2>As Jake</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Zoe Saldana</h4>
+                                                            <h2>As Neytiri(Zoe Saldaña)</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +198,21 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Sigourney Weaver</h4>
+                                                            <h2>As Kiri</h2>
                                                   </span>
                                         </div>
 
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
-                                                  </span>
-                                        </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Avatar2.jpeg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Stephen Lang</h4>
+                                                            <h2>As Quaritch</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +237,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
