--- a/main/Video_playback/movies/bad_boys_ride_or_die.html
+++ b/main/Video_playback/movies/bad_boys_ride_or_die.html
@@ -28,7 +28,7 @@
                                                   <li class="menu-list-item" onclick="homepage()">Home
                                                             <!-- <a href="/main/index.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="moviepage()">Movies
+                                                  <li class="menu-list-item active" onclick="moviepage()">Movies
                                                             <!-- <a href="/main/index_movie.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="seriespage()">Series
@@ -92,12 +92,7 @@
                     </div>
 
                     <div class="video-container">
-                              <!-- <div class="video-episode-container">
-
-                              </div> -->
-
                               <video class="video-file" id="myVideo" controls>
-                                        <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
                                         <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
                               </video>
                     </div>
@@ -132,21 +127,36 @@
                               Director
                     </div>
                     <div class="castmembers-director">
-                              <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
-                                        <span>
-                                                  <h4>Adil El Arbi</h4>
-                                                  <h2>Director | Producer | Writer</h2>
-                                        </span>
-                              </div>
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <span>
+                                                            <h4>Adil El Arbi</h4>
+                                                            <h2>Director | Producer | Writer</h2>
+                                                  </span>
+                                        </div>
+                              </span>
 
-                              <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
-                                        <span>
-                                                  <h4>Bilall Fallah</h4>
-                                                  <h2>Director | Actor | Producer</h2>
-                                        </span>
-                              </div>
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <span>
+                                                            <h4>Bilall Fallah</h4>
+                                                            <h2>Director | Actor | Producer</h2>
+                                                  </span>
+                                        </div>
+                              </span>
+                              
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <!-- this block of code is just for the alignment of the content  -->
+                                                  <!-- <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <span>
+                                                            <h4>Bilall Fallah</h4>
+                                                            <h2>Director | Actor | Producer</h2>
+                                                  </span> -->
+                                        </div>
+                              </span>
                     </div>
 
                     <div class="content-castmembers">
@@ -161,7 +171,9 @@
                                                             <h2>Writer | Actor | Producer</h2>
                                                   </span>
                                         </div>
+                              </span>
 
+                              <span>
                                         <div class="castmembers-details">
                                                   <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
                                                   <span>
