--- a/main/Video_playback/movies/pirates_of_the_carribean-5.html
+++ b/main/Video_playback/movies/pirates_of_the_carribean-5.html
@@ -89,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Pirates Of The Caribbean: Dead Men Tell No Tales</h5>
                     </div>
 
                     <div class="video-container">
@@ -104,21 +104,23 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg"
+                                        alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Pirates Of The Caribbean: Dead Men Tell No Tales</h2>
+                                        <h5>2017 | Movie | 2h 9m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  Captain Jack Sparrow searches for
+                                                  the Trident of Poseidon to rule the sea while
+                                                  being pursued by old rival Captain Salazar and a
+                                                  crew of deadly ghosts who have escaped from the
+                                                  Devil's Triangle.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Action | Adventure | Fantasy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>6.5
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -130,13 +132,25 @@
                               Director
                     </div>
                     <div class="castmembers-director">
-                              <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                        <span>
-                                                  <h4>Jeff Chan</h4>
-                                                  <h2>Director | Writer | Producer</h2>
-                                        </span>
-                              </div>
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
+                                                  <span>
+                                                            <h4>Joachim Ronning</h4>
+                                                            <h2>Director | Writer | Producer</h2>
+                                                  </span>
+                                        </div>
+                              </span>
+                              
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
+                                                  <span>
+                                                            <h4>Espen Sandberg</h4>
+                                                            <h2>Director | Producer | Executive</h2>
+                                                  </span>
+                                        </div>
+                              </span>
                     </div>
 
                     <div class="content-castmembers">
@@ -145,46 +159,30 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
-                                                            <h2>Director | Writer | Producer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Jeff Nathanson</h4>
+                                                            <h2>Writer | Producer | Script & Community Dept.</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Terry Rossio</h4>
+                                                            <h2>Writer | Producer | Director</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Ted Elliott</h4>
+                                                            <h2>Writer | Producer | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -198,18 +196,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Johnny Deep</h4>
+                                                            <h2>As Captain Jack Sparrow</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Geoffrey Rush</h4>
+                                                            <h2>As Hector Barbossa</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +215,36 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Javier Bardem</h4>
+                                                            <h2>As Captain Salazar</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
+                                                            <h4>Bernton Thwaites</h4>
+                                                            <h2>As Henry Turner</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Kaya Scodelario</h4>
+                                                            <h2>As Carina Smyth</h2>
+                                                  </span>
+                                        </div>
+                                        
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Pirates_of_the_Caribbean_5.jpg" alt="">
+                                                  <span>
+                                                            <h4>Kevin McNally</h4>
+                                                            <h2>As Gibbs</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +269,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
