--- a/main/Video_playback/movies/teen_wolf_the_movie.html
+++ b/main/Video_playback/movies/teen_wolf_the_movie.html
@@ -89,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Teen Wolf: The Movie</h5>
                     </div>
 
                     <div class="video-container">
@@ -104,21 +104,22 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Teen Wolf: The Movie</h2>
+                                        <h5>2023 | Movie | 2h 21m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  A terrifying evil has emerged. The
+                                                  wolves howl once again, but only a Werewolf like
+                                                  Scott McCall, can gather both new allies and
+                                                  reunite trusted friends to fight back against what
+                                                  could be the most powerful and deadliest enemy.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Action | Drama | Fantasy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.6
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -131,9 +132,9 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                        <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                         <span>
-                                                  <h4>Jeff Chan</h4>
+                                                  <h4>Russell Mulcahy</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -145,46 +146,30 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
-                                                            <h2>Director | Writer | Producer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Jeff Davis</h4>
+                                                            <h2>Writer | Producer | Director</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Will Wallace</h4>
+                                                            <h2>Writer | Producer | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Joseph Patrick Genier</h4>
+                                                            <h2>Producer | Production Manager | Director</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -198,18 +183,26 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Tyler Posey</h4>
+                                                            <h2>As Scott McCall</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Tyler Hoechlin</h4>
+                                                            <h2>As Derek Hale</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
+                                                  <span>
+                                                            <h4>Colton Haynes</h4>
+                                                            <h2>As Jackson Whittemore</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +210,44 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Crystel Reed</h4>
+                                                            <h2>As Allison Argent</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
+                                                            <h4>Holland Roden</h4>
+                                                            <h2>As Lydia Martin</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
+                                                  <span>
+                                                            <h4>Ian Bohen</h4>
+                                                            <h2>As Peter Hale</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Shelley Hennig</h4>
+                                                            <h2>As Malia Tate</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Teen-Wolf-the-movie.jpg" alt="">
+                                                  <span>
+                                                            <h4>JR Bourne</h4>
+                                                            <h2>As Chris Argent</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +272,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
