--- a/main/Video_playback/movies/harrypotter7-2.html
+++ b/main/Video_playback/movies/harrypotter7-2.html
@@ -89,36 +89,31 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Harry Potter And The Deathly Hallows: Part-2
+                              </h5>
                     </div>
 
                     <div class="video-container">
-                              <!-- <div class="video-episode-container">
-
-                              </div> -->
-
                               <video class="video-file" id="myVideo" controls>
-                                        <!-- <source src="/main/Video_playback/bad_boys_ride_or_die.mkv" type="video/mp4"> -->
                                         <source src="/Trailer/bad_boys_ride_or_die.mp4" type="video/mp4">
                               </video>
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Harry Potter And The Deathly Hallows: Part-2</h2>
+                                        <h5>2011 | Movie | 2h 10m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  Harry, Ron and Hermione search for Voldemort's remaining Horcruxes in
+                                                  their effort to destroy the Dark Lord as the final battle rages on at
+                                                  Hogwarts.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Adventure | Family | Fantasy</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.1
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -131,9 +126,9 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                        <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                         <span>
-                                                  <h4>Jeff Chan</h4>
+                                                  <h4>David Yates</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -145,47 +140,32 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
-                                                            <h2>Director | Writer | Producer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Steve Kloves</h4>
+                                                            <h2>Writer | Director | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>J.K. Rowling</h4>
+                                                            <h2>Writer | Producer | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
-
+                              
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <!-- this block of code is just for the alignment of the content  -->
+                                                  <!-- <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
+                                                            <h4>J.K. Rowling</h4>
+                                                            <h2>Writer | Producer | Additional Crew</h2>
+                                                  </span> -->
                                         </div>
                               </span>
                     </div>
@@ -198,18 +178,26 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Daniel Radcliffe</h4>
+                                                            <h2>As Harry Potter</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Rupert Grint</h4>
+                                                            <h2>As Ron Weasley</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
+                                                  <span>
+                                                            <h4>Bonnie Wright</h4>
+                                                            <h2>As Ginny Weasley</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +205,52 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Emma Watson</h4>
+                                                            <h2>As Hermione Granger</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
+                                                            <h4>Ralph Fiennes</h4>
+                                                            <h2>As Lord Voldemort</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
+                                                  <span>
+                                                            <h4>Maggie Smith</h4>
+                                                            <h2>As Professor Minerva McGonagall</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Alan Rickman</h4>
+                                                            <h2>As Professor Severus Snape</h2>
+                                                  </span>
+                                        </div>
+                                        
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
+                                                  <span>
+                                                            <h4>Robbie Coltrane</h4>
+                                                            <h2>As Rubeus Hagrid</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Harry_Potter_and_the_Deathly_Hollows_part2.jpg" alt="">
+                                                  <span>
+                                                            <h4>David Thewlis</h4>
+                                                            <h2>As Remus Lupin</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +275,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
