--- a/main/Video_playback/movies/joker.html
+++ b/main/Video_playback/movies/joker.html
@@ -89,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Joker</h5>
                     </div>
 
                     <div class="video-container">
@@ -104,21 +104,23 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/joker.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Joker</h2>
+                                        <h5>2019 | Movie | 2h 2m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  Arthur Fleck, a party clown and a
+                                                  failed stand-up comedian, leads an impoverished
+                                                  life with his ailing mother. However, when society
+                                                  shuns him and brands him as a freak, he decides to
+                                                  embrace the life of crime and chaos in Gotham
+                                                  City.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Crime | Drama | Thriller</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>8.4
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -131,9 +133,9 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                        <img src="/content-images/Movies/joker.jpg" alt="">
                                         <span>
-                                                  <h4>Jeff Chan</h4>
+                                                  <h4>Todd Phillips</h4>
                                                   <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
@@ -145,46 +147,30 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
+                                                            <h4>Todd Phillips</h4>
                                                             <h2>Director | Writer | Producer</h2>
                                                   </span>
                                         </div>
+                              </span>
 
+                              <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Scott Silver</h4>
+                                                            <h2>Writer | Producer | Director</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-                              </span>
-
-                              <span>
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Bob Kane</h4>
+                                                            <h2>Writer | Actor | Additional Crew</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -198,18 +184,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Joaquin Phoenix</h4>
+                                                            <h2>As Arthur Fleck</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Robert De Niro</h4>
+                                                            <h2>As Murray Franklin</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +203,36 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Zazie Beetz</h4>
+                                                            <h2>As Sophie Dumond</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
+                                                            <h4>Brett Cullen</h4>
+                                                            <h2>As Thomas Wayne</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Shea Whigham</h4>
+                                                            <h2>As Detective Burke</h2>
+                                                  </span>
+                                        </div>
+                                        
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/joker.jpg" alt="">
+                                                  <span>
+                                                            <h4>Bill Camp</h4>
+                                                            <h2>As Detective Garrity</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +257,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
