--- a/main/Video_playback/movies/venom_let_there_be_change.html
+++ b/main/Video_playback/movies/venom_let_there_be_change.html
@@ -89,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
+                              <h5>AAH Universe | Movie | Venom: Let There Be Carnage</h5>
                     </div>
 
                     <div class="video-container">
@@ -104,21 +104,22 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                              <img class="content-image" src="/content-images/Movies/Venom-2.jpg" alt="">
 
                               <div class="content-details">
-                                        <h2>Code 8: Part-II</h2>
-                                        <h5>2024 | Movie | 1h 40m</h5>
+                                        <h2>Venom: Let There Be Carnage</h2>
+                                        <h5>2021 | Movie | 1h 37m</h5>
                                         <div class="content-desc">
-                                                  Follows a girl fighting to get justice for her brother who was slain
-                                                  by corrupt police officers. She enlists the help of an ex-con and his
-                                                  former partner to face off against a highly regarded and
-                                                  well-protected police sergeant.
+                                                  Eddie Brock attempts to reignite
+                                                  his career by interviewing serial killer Cletus
+                                                  Kasady, who becomes the host of the symbiote
+                                                  Carnage and escapes prison after a failed
+                                                  execution.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
+                                                  <h5 id="gen">Action | Sci-Fi | Thriller</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.9
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -131,10 +132,11 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                        <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                         <span>
-                                                  <h4>Jeff Chan</h4>
-                                                  <h2>Director | Writer | Producer</h2>
+                                                  <h4>Andy Serkis</h4>
+                                                  <h2>Director | Producer | Actor
+                                                  </h2>
                                         </span>
                               </div>
                     </div>
@@ -145,47 +147,32 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Jeff Chan</h4>
-                                                            <h2>Director | Writer | Producer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Chris Pare</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Kelly Marcel</h4>
+                                                            <h2>Writer | Producer | Actress</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Sherren Lee</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
-                                        </div>
-
-                                        <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
-                                                  <span>
-                                                            <h4>Jesse LaVercombe</h4>
-                                                            <h2>Writer</h2>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>Writer | Actor | Producer</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <!-- this block of code is just for the alignment of the content  -->
+                                                  <!-- <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Tom Selenow</h4>
-                                                            <h2>Writer</h2>
-                                                  </span>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>Writer | Actor | Producer</h2>
+                                                  </span> -->
                                         </div>
                               </span>
                     </div>
@@ -198,18 +185,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Robbie Amell</h4>
-                                                            <h2>As Connor</h2>
+                                                            <h4>Tom Hardy</h4>
+                                                            <h2>As Eddie Brock / Venom</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Stephen Amell</h4>
-                                                            <h2>As Garrett</h2>
+                                                            <h4>Michelle Williams</h4>
+                                                            <h2>As Anne Weying</h2>
                                                   </span>
                                         </div>
 
@@ -217,28 +204,28 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Alex Mallari Jr.</h4>
-                                                            <h2>As Sergeant 'King' Kingston</h2>
+                                                            <h4>Woody Harrelson</h4>
+                                                            <h2>As Cletus Kasady / Carnage</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Sirena Gulamgaus</h4>
-                                                            <h2>As Pavani</h2>
+                                                            <h4>Naomie Harris</h4>
+                                                            <h2>As Frances Barrison / Shriek</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <img src="/content-images/Movies/Venom-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Aaron Abrams</h4>
-                                                            <h2>As Detective Davis</h2>
+                                                            <h4>Peggy Lu</h4>
+                                                            <h2>As Mrs. Chen</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -263,7 +250,7 @@
                               </abbr>
                               <abbr title="Facebook">
                                         <i class="fa-brands fa-facebook"></i>
-                              </abbr>                          
+                              </abbr>
                     </div>
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
